# ParaViewNek5000Plugin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  paraview.plugin
src/Reader/: CMakeLists.txt  Nek5000Reader.xml  TestReaderSimple.cxx  vtk.module  vtkNek5000Reader.cxx  vtkNek5000Reader.h
src/Testing/: CMakeLists.txt  TestReaderSimple.cxx
src/Testing/Cxx/: TestReaderSimple.cxx
